--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -65,3 +65,237 @@
       transform: translateX(98vh);
   }
 }
+
+
+
+
+
+
+
+
+
+.container{
+  height: 130vh;
+  width: 80vw;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: 10vw;
+  background-color: var(--background-black);
+}
+
+.bike__info__container{
+  position: relative;
+  height: 6vh;
+  width: 35vw;
+  border-radius: 10px;
+  background-color: var(--background-black);
+  display: none;
+  flex-direction: row;
+  gap: 4vw;
+  transition-duration: 0.3s;
+}
+.bike1__plaatsen{
+  display: flex;
+  position: relative;
+  top: 1vh;
+  left: 3vw;
+  font-size: 2.5vh;
+  font-weight: 300;
+}
+.bike1__aantal-plaatsen{
+  color: var(--green);
+  font-weight: 600;
+  margin-right: 1vw;
+}
+.bike1__fietsen{
+  display: flex;
+  position: relative;
+  top: 1vh;
+  left: 3vw;
+  font-size: 2.5vh;
+  font-weight: 300;
+}
+.bike1__aantal-fietsen{
+  color: var(--green);
+  font-weight: 600;
+  margin-right: 1vw;
+}
+.go1{
+  cursor: pointer;
+  background-color: var(--green);
+  color: var(--background-black);
+  font-weight: 600;
+  font-size: 2.5vh;
+  border: none;
+  border-radius: 10px;
+  height: 6vh;
+  padding-left: 3vh;
+  padding-right: 3vh;
+  margin-left: 15vw;
+  text-transform: uppercase;
+}
+.pin_icon{
+  height: 2vw;
+  margin-right: 2vw;
+}
+.bike__title{
+  position: relative;
+  left: 2vw;
+  top: 1vw;
+  color: var(--white);
+  font-size: 2.5vw;
+  font-weight: 700;
+  letter-spacing: 0.1vw;
+}
+.km1{
+  color: var(--green);
+  font-weight: 700;
+  font-size: 2vw;
+}
+
+.bike1{
+  position: relative;
+  top: 16vh;
+  margin-bottom: 6vh;
+  height: 12vw;
+  background-image: url('../../public/city-img-centraal.png');
+  background-size: 100%;
+  filter: brightness(1);
+  border-radius: 15px;
+  transition-duration: 0.3s;
+  filter: contrast(1.2);
+  overflow: hidden;
+  text-transform: uppercase;
+}
+.bike1:hover{
+  top: 15.5vh;
+  filter: brightness(1);
+  transition-duration: 0.3s;
+  .bike__info__container{
+      display: flex;
+      transition-duration: 0.3s;
+  }
+}
+
+.bike2{
+  position: relative;
+  top: 16vh;
+  margin-bottom: 6vh;
+  height: 12vw;
+  background-image: url('../../public/city-img-brug.png');
+  background-size: 100%;
+  filter: brightness(1);
+  border-radius: 15px;
+  transition-duration: 0.3s;
+  filter: contrast(1.2);
+  overflow: hidden;
+  text-transform: uppercase;
+}
+.bike2:hover{
+  top: 15.5vh;
+  filter: brightness(1);
+  transition-duration: 0.3s;
+  .bike__info__container{
+      display: flex;
+      transition-duration: 0.3s;
+  }
+}
+
+.bike3{
+  position: relative;
+  top: 16vh;
+  margin-bottom: 6vh;
+  height: 12vw;
+  background-image: url('../../public/city-img-mair.png');
+  background-size: 100%;
+  filter: brightness(1);
+  border-radius: 15px;
+  transition-duration: 0.3s;
+  filter: contrast(1.2);
+  overflow: hidden;
+  text-transform: uppercase;
+}
+.bike3:hover{
+  top: 15.5vh;
+  filter: brightness(1);
+  transition-duration: 0.3s;
+  .bike__info__container{
+      display: flex;
+      transition-duration: 0.3s;
+  }
+}
+
+
+@media screen and (max-width: 770px) {
+  .bike1{
+      height: 30vw;
+      top: 15vh;
+      margin-bottom: 5vh;
+      background-size: cover;
+  }
+  .bike2{
+      height: 30vw;
+      top: 15vh;
+      margin-bottom: 5vh;
+      background-size: cover;
+  }
+  .bike3{
+      height: 30vw;
+      top: 15vh;
+      margin-bottom: 5vh;
+      background-size: cover;
+  }
+  .pin-icon{
+      height: 5vw;
+      margin-right: 2vw;
+  }
+  .bike__title{
+      position: relative;
+      left: 2vw;
+      top: 1vw;
+      color: var(--white);
+      font-size: 5vw;
+      font-weight: 700;
+      letter-spacing: 0.1vw;
+  }
+  .km1{
+      color: var(--green);
+      font-weight: 700;
+      font-size: 5vw;
+  }
+  .bike__info__container{
+      display: flex;
+      height: 7vw;
+      width: 55vw;
+      margin-top: 1vh;
+      margin-bottom: 1vh;
+      background-color: var(--white);
+      color: var(--background-black);
+  }
+  .bike1__plaatsen{
+      left: 5vw;
+      top: 0.5vh;
+      font-size: 4vw;
+      font-weight: 400;
+  }
+  .bike1__aantal-plaatsen{
+      color: var(--nav-gray);
+  }
+  .bike1__fietsen{
+      left: 5vw;
+      top: 0.5vh;
+      font-size: 4vw;
+      font-weight: 400;
+  }
+  .bike1__aantal-fietsen{
+      color: var(--nav-gray);
+  }
+  .go1{
+      height: 7vw;
+      padding-left: 2vw;
+      padding-right: 2vw;
+      margin-left: 8vw;
+      font-size: 4vw;
+  }
+}
