--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,6 +37,23 @@ button{
   --licht: #4a4a4a;
 }  
   
+/* width */
 ::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--nav-gray);
+  border-radius: 15px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--green);
 }
